Fixed hero sizing on mobile

--- a/src/containers/LandingPage/LandingPage.module.css
+++ b/src/containers/LandingPage/LandingPage.module.css
@@ -1,5 +1,3 @@
-
-
 .root {
   overflow-x: hidden;
   background-color: var(--matterColorLight);
@@ -15,9 +13,11 @@
   width: 100%;
   padding: 0;
   height: calc(100vh - var(--topbarHeight));
+  max-height: calc(100svh - var(--topbarHeight));
 
   @media screen(md) {
     height: calc(100vh - var(--topbarHeightDesktop));
+    max-height: auto;
   }
 }
 
